# vektori

./: .env.example  .gitignore  PHASE2.md  README.md  RETRIEVAL_DESIGN.md  VEKTORI_TECHNICAL_SPEC (2).md  benchmark_viewer.html  demo.sh  docker-compose.yml  export_cache_report.py  pyproject.toml  run_longmemeval_s.py  test_conflict.py  test_conflict2.py  test_llm_dedup_check.py  test_longmemeval_setup.py  test_synthesis.py  vektori-harness.md
.github/workflows/: ci.yml  publish.yml
api/: Dockerfile  auth.py  main.py  routes.py
benchmarks/: __init__.py  eval_fsmemory.py
benchmarks/beam/: beam_judge.py  beam_runner.py  run_beam.py
benchmarks/locomo/: locomo_judge.py  locomo_runner.py  run_locomo.py
benchmarks/longmemeval/: README.md  __init__.py  judge.py  longmemeval_runner.py  requirements-benchmark.txt  run_longmemeval.sh  session_cache.py
docs/: AGENT_HARNESS_CHECKLIST.md  AGENT_HARNESS_SPEC.md  NEXT_GEN_FS_MEMORY_SYSTEM.md
examples/: agent_type_extraction.py  demo2.py  github_connector_demo.py  ollama_milvus_session_demo.py  openai_agent.py  pipecat_voice_agent.py  vektori_agent_demo.py
nginx/: default.conf
scripts/: gepa_optimize_locomo_qa.py  get_github_token.sh  init.sql  live_demo.py  migrate_fsmemory_to_memfs.py  run_and_judge.py  test_agent_e2e.py
tests/: conftest.py  seed_and_bench.py  test_api.py
tests/integration/: test_agent_chat_flow.py  test_conflicts.py  test_fsmemory.py  test_ingestion.py  test_memfs.py  test_milvus_backend.py  test_milvus_e2e.py  test_neo4j_backend.py  test_qdrant_backend.py  test_retrieval.py  test_tiered.py
tests/unit/: test_agent.py  test_agent_context.py  test_agent_type_presets.py  test_async_worker.py  test_beam_runner.py  test_cli_agent.py  test_factory.py  test_filter.py  test_fsmemory_chunker.py  test_harness_spec_checklist.py  test_hasher.py  test_llm_dedup.py  test_locomo_judge.py  test_locomo_runner.py  test_longmemeval_judge.py  test_longmemeval_runner.py  test_memory_explorer.py  test_message_window.py  test_milvus_backend.py  test_new_backends_factory.py  test_profile_store.py  test_prompt_builder.py  test_scoring.py  test_sqlite_sentence_metadata.py  test_synthesis.py  test_tools.py  test_veclite_backend.py  test_window_persistence.py
tools/: __init__.py
tools/memory_explorer/: DESIGN.md  README.md  __init__.py  memory_explorer.html  server.py
vektori/: __init__.py  agent.py  cli.py  client.py  config.py  context.py  prompts.py  telemetry.py
vektori-dashboard/: package-lock.json  package.json
whitepaper/: locomo_analysis_v1.md
(+78 files in other folders)
